--- a/sass/app/_layout.scss
+++ b/sass/app/_layout.scss
@@ -7,8 +7,15 @@
 	text-align: center;
 }
 .grid--large {
-	@include grid(1200px);
+	@include grid(1024px);
+	text-align: center;
+	h1 {
+		padding: 30px;
+		text-align: center;
+	}
 }
+
+
 
 // default list styling
 ul {
@@ -18,17 +25,24 @@ ul {
 	vertical-align: top;
 	margin: 5px 10px 15px;
 	padding: 20px 30px;
+	h3 {
+		margin-bottom: 15px;
+	}
 	li {
 		font-size: 120%;
 		padding: 20px;
+		text-align: center;
+		h4,p,.highlighted {
+			padding: 5px 0 5px;
+		}
 		h4 {
-			font-size: 130%;
+			font-size: 120%;
 			text-transform: uppercase;
 		}
 		p {
 			color: $stc;
 		}
-		span {
+		.highlighted {
 			font-size: 150%;
 			color: $htc;
 			font-weight: bold;
