--- a/sass/app/_items.scss
+++ b/sass/app/_items.scss
@@ -1,7 +1,50 @@
+// default list styling
+ul {
+	display: inline-block;
+	list-style-type: none;
+	text-align: left;
+	vertical-align: top;
+	margin: 5px 10px 15px;
+	padding: 20px 30px;
+	text-align: center;
+	h3 {
+		margin-bottom: 15px;
+	}
+	li {
+		font-size: 120%;
+		padding: 20px;
+
+		img {
+			display: block;
+			margin: 0 auto;
+		}
+		h4,p,.highlighted {
+			padding: 8px 0 8px;
+		}
+		h4,.highlighted {
+			display: inline-block;
+			margin: 0 20px;
+		}
+		h4 {
+			font-size: 120%;
+			text-transform: uppercase;
+		}
+		p {
+			color: $stc;
+		}
+		.highlighted {
+			font-size: 150%;
+			color: $htc;
+			font-weight: bold;
+		}
+	}
+}
+
+
 // add to card button;
 .btn--cart {
 	display: block;
-	margin: 0 auto;	
+	margin: 0 auto;
 	padding: 10px 30px;
 	font-weight: bold;
 	color: $rtc;
