--- a/sass/app/_cart.scss
+++ b/sass/app/_cart.scss
@@ -4,17 +4,18 @@
 .cart--closed {
 	position: absolute;
 	right: 0;
-	top: 0;
-	width: 250px;
-	padding: 10px 20px;
+	top: 65px;
+	// width: 250px;
+	padding: 12px 20px;
 	text-align: center;
 	color: $rtc;
 	background: $hbc;
+	border-radius: 35px 0 0 35px;
 }
 .cart--open {
 	position: absolute;
 	right: 0;
-	top: 0;
+	top: 65px;
 	width: 400px;
 	padding: 10px;
 	text-align: center;
@@ -26,7 +27,7 @@
 
 	li {
 		display: inline-block;
-		margin: 0 auto;
+		margin: 0 auto 15px;
 		img {
 			max-width: 50%;
 		}
