--- a/sass/app/_nav.scss
+++ b/sass/app/_nav.scss
@@ -34,13 +34,13 @@ nav {
     z-index: 10;
 }
 .nav-closed {
-	padding: 5px 15px 5px 20px;
+	padding: 8px 20px;
 	position: absolute;
-	left: -3px;
+	left: -1px;
 	margin-top: 10px;
 	color: $rtc;
 	background: #333;
-	border-radius: 0 7px 7px 0;
+	border-radius: 0 35px 35px 0;
 	font-size: 250%;
 	font-weight: bold;
 }
