--- a/sass/app/_nav.scss
+++ b/sass/app/_nav.scss
@@ -25,6 +25,26 @@ nav {
 }
 
 // left nav submenu
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .8s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
+  opacity: 1;
+}
+.slide-fade-enter-active {
+  transition: all 1s cubic-bezier(.75,.49,.31,1);
+}
+.slide-fade-leave-active {
+  transition: all 1s cubic-bezier(.75,.49,.31,1);
+}
+.slide-fade-enter, .slide-fade-leave-to
+/* .slide-fade-leave-active for <2.1.8 */ {
+  transform: translateX(-250px);
+  opacity: 1;
+}
+
+
+
 .nav--left {
 	position: absolute;
     width: 15%;
@@ -32,6 +52,10 @@ nav {
     background: #333;
     height: 100%;
     z-index: 10;
+	transition-duration: 300ms;
+	.nav-open {
+		transition: all 300ms ease-in-out;
+	}
 }
 .nav-closed {
 	padding: 8px 20px;
