--- a/sass/app/_cart.scss
+++ b/sass/app/_cart.scss
@@ -4,41 +4,64 @@
 .cart--closed {
 	position: absolute;
 	right: 0;
-	top: 65px;
+	top: 35px;
 	// width: 250px;
-	padding: 12px 20px;
+	padding: 5px 10px 5px 20px;
 	text-align: center;
 	color: $rtc;
 	background: $hbc;
 	border-radius: 35px 0 0 35px;
+	i {
+		font-weight: bold;
+	    position: absolute;
+	    right: 5px;
+	    color: $hbc;
+	    width: 22px;
+	    height: 22px;
+	    background: white;
+	    border-radius: 10px;
+	    padding: 3px;
+	}
+
 }
 .fade-enter-active, .fade-leave-active {
   transition: opacity 1s;
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active in <2.1.8 */ {
-  opacity: 1;
-  transform: translateX(420px);
+  opacity: 0;
+  // transform: translateY(-420px);
 }
 
+.cart__bg {
+	position: absolute;
+	left: 0;
+	top: 0;
+	background: rgba(0,0,0,0.6);
+	width: 100%;
+	height: 100%;
+}
 .cart--open {
 	position: absolute;
-	right: 0;
-	top: 65px;
-	width: 400px;
-	padding: 10px;
-	text-align: center;
-	color: $hbc;
-	background: $pbc;
-	vertical-align: top;
-	border-radius: 35px 0 0 35px;
-    box-shadow: -2px 3px 15px rgba(0, 0, 0, 0.15);
-	transition: all 550ms cubic-bezier(.75,.49,.31,1);
+	height: 90vh;
+    width: 70%;
+    right: 15%;
+    top: 5vh;
+    padding: 20px;
+	overflow: scroll;
+    text-align: center;
+    color: #2980b9;
+    background: #fff;
+    vertical-align: top;
+    border-radius: 5px;
+    box-shadow: -2px 3px 45px rgba(0, 0, 0, 0.75);
+    transition: all 550ms cubic-bezier(0.75, 0.49, 0.31, 1);
 
 	li {
-		display: inline-block;
+		display: block;
 		margin: 0 auto 15px;
 		img {
-			max-width: 50%;
+			padding: 10px;
+			margin: 0 auto;
 		}
 		h4,p,.highlighted {
 			padding: 0 0 5px;
@@ -57,6 +80,7 @@
 			font-weight: bold;
 		}
 		.btn--cart {
+			margin: 0;
 			background: $htc;
 			font-size: 100%;
 			padding: 5px 15px;
@@ -64,6 +88,9 @@
 				background: $pbc;
 			}
 		}
+	}
+	.btn--cart {
+		margin: 0 auto;
 	}
 
 }
