--- a/sass/app/_items.scss
+++ b/sass/app/_items.scss
@@ -5,17 +5,17 @@ ul {
 	text-align: left;
 	vertical-align: top;
 	margin: 5px 10px 15px;
-	padding: 20px 30px;
-	text-align: center;
 	h3 {
 		margin-bottom: 15px;
 	}
 	li {
 		font-size: 120%;
-		padding: 20px;
+		padding: 15px;
 		vertical-align: top;
+		background: #f1f1f1;
+		display: inline-block;
 		img {
-			display: inline-block;;
+			display: block;
 			margin: 0 auto;
 		}
 		h4,p,.highlighted {
@@ -23,24 +23,34 @@ ul {
 		}
 		h4,.highlighted {
 			display: inline-block;
-			margin: 0 20px;
 		}
 		h4 {
+			color: $hbc;
 			font-size: 120%;
 			text-transform: uppercase;
 		}
-		p {
+		.fixed-desc {
+			display: block;
 			color: $stc;
+			margin-bottom: 10px;
+			height: 75px;
 		}
 		.highlighted {
-			font-size: 150%;
+			font-size: 200%;
 			color: $htc;
 			font-weight: bold;
+			float: right;
 		}
 		.item__content {
 			display: inline-block;
 			vertical-align: top;
+			padding: 5px 10px;
 		}
+		.float--right {
+			float: right;
+			width: 40%;
+		}
+
 	}
 }
 
@@ -48,7 +58,6 @@ ul {
 // add to card button;
 .btn--cart {
 	display: block;
-	margin: 0 auto;
 	padding: 10px 30px;
 	font-weight: bold;
 	color: $rtc;
