--- a/sass/app/_layout.scss
+++ b/sass/app/_layout.scss
@@ -8,20 +8,44 @@
 }
 .grid--large {
 	@include grid(1024px);
-	text-align: center;
-	h1 {
-		padding: 30px;
-		text-align: center;
+	background: #dedede;
+	position: relative;
+	.category-tabs {
+		color: #efefef;
+		background: #333;
+		border-bottom: 5px solid #555;
+		padding: 10px 10px 0;
+		h1 {
+			padding: 15px 20px;
+		}
+		ul {
+			padding: 0;
+			margin: 0 5px;
+			li {
+				display: inline-block;
+				padding: 8px 20px;
+				margin: 0 5px 0 0;
+			}
+			.menu--active {
+				color: #efefef;
+				background: #666;
+				border-radius: 10px 10px 0 0;
+			}
+		}
 	}
 }
 body {
 	position: relative;
 }
 
+.icon {
+	padding: 5px;
+	width: 48px;
+}
 
 //box shadow for blocks or elements level;
 .box-shadow {
-	box-shadow: -2px 3px 10px rgba(0,0,0,0.22);
+	box-shadow: -1px 1px 5px rgba(0,0,0,0.3);
 }
 //adds bottom margin to element
 .margin-bottom {
